--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,17 @@ cache:
       - $HOME/.ccache
       - $HOME/downloads
   timeout: 1000
-language: java
 services:
       - docker
 
 matrix:
    include:
       - os: linux
+        addons:
+         apt:
+          packages: maven
         arch: arm64
         env: PROJ=artoolkitplus linux-armhf
         install: true
-        script: ./ci/install-travis.sh
+        language: minimal
+        script: "sudo add-apt-repository ppa:openjdk-r/ppa; sudo apt-get update; sudo apt install openjdk-11-jdk-headless; ./ci/install-travis.sh"
